增加了目录 TOC

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
     <p>
       不知不觉，LOL这款游戏已经陪伴了我8年，我的账号在恕瑞玛大区，游戏id为灬文化流氓。在这款游戏中，我最喜欢使用的英雄有远古巫灵-泽拉斯、潮汐海灵-菲兹、时间刺客-艾克，接下来给大家就这三个英雄进行介绍。
     </p>
+    <nav>
+        <ul>
+            <li><a href="#zelasi">远古巫灵-泽拉斯</a></li>
+            <li><a href="#feizi">潮汐海灵-菲兹</a></li>
+            <li><a href="#aike">时间刺客-艾克</a></li>
+        </ul>
+    </nav>
     <h2>英雄介绍</h2>
     <hr />
     <ul>
         <li>
-            <h3>远古巫灵-泽拉斯</h3>
+            <h3 id="zelasi">远古巫灵-泽拉斯</h3>
         <p><em>英雄简介：</em></p>泽拉斯是古代恕瑞玛的巫师，飞升以后的他变成了一种奥术能量体，在魔法石棺的碎片之中涌动。数千年来，他被囚禁在沙漠之下，但最近恕瑞玛的崛起却将他从远古的牢笼中解放出来。对权力的疯狂渴求驱使着他，想要夺回他认为属于自己的东西，并取代世界上这些自命不凡的文明，让自己成为唯一受膜拜的偶像，统一整个世界。
         </p>
         <p><em>技能介绍：</em>
@@ -52,7 +59,7 @@
         <p><em>使用技巧：</em><p>想要玩好泽拉斯对技能命中率要求非常高，因为他的四个技能都是非指向性技能，一般我在使用的时候，若是对线阶段，先使用W进行减速，之后Q技能基本必中。E技能使用可以在和敌方英雄间隔一个快死的小兵时，在小兵马上死亡之前出E，减少对手反应时间。打团时利用手长优势，先用Q技能POKE，如果对面有奶妈、死歌、娜美这种腿短还是脆皮的英雄，后期只要出现在视野里就可以用R技能轻轻松松收获300G。</p></p>
         </li>
         <li>
-            <h3>潮汐海灵-菲兹</h3>
+            <h3 id="feizi">潮汐海灵-菲兹</h3>
         <p><p><em>英雄简介：</em></p>菲兹是一名水陆两栖的约德尔人，生活在比尔吉沃特周围的群礁之间。他会经常把迷信的船长们抛进海中的什一税捡起来物归原主。不过即使是最粗鲁的水手也知道不要招惹他，因为这里流传着的各种教训，都是因为低估了这个小鬼。经常有人误会他的行为只是海洋精灵的任性举动，而事实上他可以号令来自深渊的巨型猛兽，而且不管是盟友还是敌人他都喜欢捉弄。
         </p>
             
@@ -84,7 +91,7 @@
         <p><em>使用技巧：</em><p>前三级猥琐吃兵，最好在三级时将兵线控在己方一塔下，找到机会后WQ连招追着对方A，等对方交出闪现或位移技能后再使用E打伤害。六级之后可以通过QR连招减少对手反应时间。菲兹的E技能是神技，到后期做出中娅沙漏并且CD叠起来之后，可以利用E进行位移或躲避关键伤害，利用QW和平A打伤害，同时可以利用中娅沙漏的间隔多释放一次E技能。</p></p>
         </li>
         <li>
-            <h3>时间刺客-艾克</h3>
+            <h3 id="aike">时间刺客-艾克</h3>
         <p><p><em>英雄简介：</em></p>艾克是一名来自祖安不良街区的奇才。他可以操纵时间，从而让任何处境都变得对自己有利。通过使用他自己的发明——Z型驱动——他可以对现实的其它分支的可能性进行探索。在不断试验多维或然率的同时，艾克还将他的时间花费在与祖安的其他走失儿童一起撒野上。尽管他酷爱这种自由自在，但只要他的朋友们遇到了威胁，他就会不顾一切地去保护他们。对于毫不知情的观测者来说，艾克总是在一次又一次且轻而易举地完成着不可能的事情。
         </p>
             
