改变了英雄台词的表格

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         img{
             max-width: 100%;
         }
+        table{
+            border-spacing: 0;
+            border-collapse: collapse;
+        }
+        th,td{
+            border:1px solid greenyellow;
+        }
     </style>
   </head>
   <body>
     <h1>我在LOL中最喜欢使用的英雄</h1>
     <p>
-      不知不觉，LOL这款游戏已经陪伴了我8年，我的账号在恕瑞玛大区，游戏id为灬文化流氓。在这款游戏中，我最喜欢使用的英雄有远古巫灵-泽拉斯、潮汐海灵-菲兹、时间刺客-艾克，接下来给大家就这三个英雄进行介绍。
+      不知不觉，LOL这款游戏已经陪伴了我8年，我的账号在恕瑞玛大区。在这款游戏中，我最喜欢使用的英雄有远古巫灵-泽拉斯、潮汐海灵-菲兹、时间刺客-艾克，接下来给大家就这三个英雄进行介绍。
     </p>
     <nav>
         <ul>
